<resources>
    <string name="app_name">易务车宝</string>
    <string name="progress">进度</string>
    <string name="nearby">附近</string>
    <string name="commercial">商家</string>
    <string name="home">首页</string>
    <string name="yiwu">易务</string>
    <string name="my">我的</string>
    <string name="micromsg_contact">微信</string>
    <string name="qq_contact">QQ</string>
    <string name="phone_contact">电话</string>
    <string name="position">地区</string>
    <string name="goback">返回</string>
    <string name="my_service">我的服务</string>
    <string name="car_manager">爱车管理</string>
    <string name="saled">已售</string>
    <string name="transact">办理</string>
    <string name="want">我要</string>
    <string name="reward">赏金</string>
    <string name="here">我在</string>
    <string name="select_type">请选择类型</string>
    <string name="help_type">求助类型</string>
    <string name="time_to">有效期至</string>
    <string name="setting_time">为求助设置一个截止时间</string>
    <string name="hao_money_to_pay">我愿意支付多少报酬给帮助者</string>
    <string name="need_to_help">我需要别人帮助我什么</string>
    <string name="descrip">描述</string>
    <string name="descrip_hint">说一说具体的求助信息，清楚明确的描述更容易获得帮助</string>
    <string name="navigation">导航</string>
    <string name="car_serve">汽车服务</string>
    <string name="home_search_hint">输入商家、品类、商圈</string>
    <string name="car_service">车务</string>
    <string name="registration">上牌</string>
    <string name="car_credit">车贷</string>
    <string name="user_name">用户名</string>
    <string name="click_add_car">点击添加车辆</string>
    <string name="add_car_descrip">爱车添加，车务无忧办理</string>
    <string name="car_maintain">爱车保养</string>
    <string name="maintain">保养</string>
    <string name="validity_insurance">有效车险</string>
    <string name="next_annual_inspection">下次年检</string>
    <string name="query_break_rules">查询违章</string>
    <string name="park_pay">停车缴费</string>
    <string name="car_appraisement">爱车估值</string>
    <string name="technician_online">技师在线</string>
    <string name="more_service">更多服务</string>
    <string name="refuel_up">加油充值</string>
    <string name="insurance_service">车险服务</string>
    <string name="bread_rules_query">车辆违法查询</string>
    <string name="bread_rules_pay">交通违法缴罚</string>
    <string name="valid_car_insurance">车险</string>
    <string name="nekwork_error">网络错误，请检查网络后重新操作</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_account_hint">手机/邮箱/用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_account">登录</string>
    <string name="register_account">注册</string>
    <string name="register_login">登录/注册</string>
    <string name="forgot_password">找回密码</string>
    <string name="login_with_phone">手机号快捷登录</string>
    <string name="login_third_party">使用第三方账号登录</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="input_code_txt">输入验证码</string>
    <string name="setting_password">设置密码</string>
    <string name="input_register_number">请输入您的手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="readed_and_agree">我已阅读并同意</string>
    <string name="yiwu_agreenment">《易车易宝平台用户协定》</string>
    <string name="code_sent">验证码短信已发送到</string>
    <string name="msg_code">请输入短信中的验证码</string>
    <string name="submit_code">提交验证码</string>
    <string name="input_password">请输入密码（长度在6-32个字符之间)</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="pwd_can_not_null">密码不能为空</string>
    <string name="acc_can_not_null">账户不能为空</string>
    <string name="pwd_length_below">密码不能低于</string>
    <string name="pwd_length_overtop">密码不能高于</string>
    <string name="string_append">个字符串</string>
    <string name="pwd_inconsistency">前后密码不一致，请重新输入</string>
    <string name="logging">正在登录...</string>
    <string name="geting_code">正在获取验证码...</string>
    <string name="checking">正在验证</string>
    <string name="reset_password">重置密码失败</string>
    <string name="reseting">正在重置密码</string>
    <string name="check_fail">验证失败，请检查验证码后重新验证</string>
    <string name="exit">退出登录</string>
    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_use">待使用</string>
    <string name="underway">进行中</string>
    <string name="done">已完成</string>
    <string name="wait_assess">待评价</string>
    <string name="after_sale">退款/售后</string>
    <string name="pay_status">支付状态</string>
    <string name="whole_city">全部</string>
    <string name="default_sort">默认排序</string>
    <string name="add_car_hint">添加后能时刻把握爱车信息哦</string>
    <string name="account_residual">账号余额</string>
    <string name="my_order">我的订单</string>
    <string name="personal_data">个人资料</string>
    <string name="account_balance">账户余额</string>
    <string name="income_detail">收入明细</string>
    <string name="your_account_balance">您的账户余额</string>
    <string name="pay_manager">支付管理</string>
    <string name="bank_car">银行卡</string>
    <string name="withdraw_deposit">提现</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_car">我的车辆</string>
    <string name="service_order">服务订单</string>
    <string name="help_order">求助订单</string>
    <string name="records_business">历史业务</string>
    <string name="post_address">邮寄地址</string>
    <string name="order_record">订单记录</string>
    <string name="add_address">新增地址</string>
    <string name="save">保存</string>
    <string name="name">姓名</string>
    <string name="two_or_more">最少2个汉字</string>
    <string name="post_num">邮编</string>
    <string name="area">地区</string>
    <string name="addr_detail">详细地址</string>
    <string name="set_to_default_address">设置为默认收货地址</string>
    <string name="add_post_address">新增邮寄地址</string>
    <string name="add_car">添加车辆</string>
    <string name="number_type">号码类型</string>
    <string name="small_car">小型汽车</string>
    <string name="middle_car">中型汽车</string>
    <string name="large_car">大型汽车</string>
    <string name="car_type">车　　型</string>
    <string name="car_brand">品 牌</string>
    <string name="select_car">请选择车辆（选填）</string>
    <string name="search_city">查询城市</string>
    <string name="car_number">车牌号码</string>
    <string name="engine_number">发动机号</string>
    <string name="frame_number">车架号码</string>
    <string name="input_car_number">请输入车牌号</string>
    <string name="input_engine_number">请输入后4位发动机号</string>
    <string name="input_frame_number">请输入后6位车架号</string>
    <string name="insurance_date">保险进保日期</string>
    <string name="input_insurance_date">请输入保险进保日期</string>
    <string name="first_attendance_date">首次保养日期</string>
    <string name="drive_distance">行驶公里数</string>
    <string name="input_drive_distance">请输入行驶公里数</string>
    <string name="remark">备　　注</string>
    <string name="input_car_about">请输入爱车（选填）</string>
    <string name="search_begin">开始查询</string>
    <string name="another_name">别称</string>
    <string name="car_certification">车辆认证</string>
    <string name="upload_certification">上传行驶证</string>
    <string name="upload_policy">上传保险单</string>
    <string name="next">下一步</string>
    <string name="confidentiality_of_information">我们将爱车的信息进行保密，请您放心填写</string>
    <string name="upload_drive_policy_data">上传行驶证/保险单确保车辆信息</string>
    <string name="hot_second_car">热门二手车</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="contact_merchant">联系商家</string>
    <string name="merchant">商家</string>
    <string name="service_window">服务窗</string>
    <string name="group_buying">团购</string>
    <string name="distance">商家与我距离</string>
    <string name="setting">设置</string>
    <string name="brand">品牌</string>
    <string name="order_num">订单号：</string>
    <string name="order">订单</string>
    <string name="use_gprs">移动网络下载图片</string>
    <string name="clean_cache">清理缓存</string>
    <string name="about_us">关于我们</string>
    <string name="merchant_data">商家信息</string>
    <string name="refund_everytime">随时退</string>
    <string name="refund_timesup">过期自动退</string>
    <string name="canvass_news">招商信息</string>
    <string name="praise">给个好评</string>
    <string name="retail">门市价：¥</string>
    <string name="rmb_symbol">¥ </string>
    <string name="use_help">使用帮助</string>
    <string name="user_agreement">用户协议</string>
    <string name="call_yiwu">呼叫易务宝</string>
    <string name="get_password">找回密码</string>
    <string name="nearby_service">附近服务</string>
    <string name="send_code">发送验证码</string>
    <string name="input_phone_number_get_pwd">请输入手机号码</string>
    <string name="check_code">验证</string>
    <string name="phone_num_format">手机号格式不对，请重新输入！</string>
    <string name="phone_login_quick">手机号快捷登录</string>
    <string name="account_login">账号登录</string>
    <string name="system_msg">系统消息</string>
    <string name="post_help">发布求助</string>
    <string name="post">发布</string>
    <string name="check_and_login">验证并登录</string>
    <string name="edit">编辑</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="input_msg_code">请输入你接收到的短信验证码</string>
    <string name="appointment_service">预约服务</string>
    <string name="appointment">预约</string>
    <string name="share">分享</string>
    <string name="appointment_business">业务预约</string>
    <string name="deel_business">业务办理</string>
    <string name="done_business">完成业务</string>
    <string name="call_after_sale">售后跟进</string>
    <string name="new_password">新密码</string>
    <string name="check_new_password">确认新密码</string>
    <string name="check_submit">确认提交</string>
    <string name="call_yiwubo">全国咨询电话：400-111-9665</string>
    <string name="yiwu_call_number">4001119665</string>
    <string name="header">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="local">所在地</string>
    <string name="point">分</string>
    <string name="login_timeout">登录已过时，请重新登录</string>
    <string name="login_hint">登录后才能进行操作</string>
    <string name="hint">提示</string>
    <string name="cancel">取消</string>
    <string name="appointment_service_hint">请输入您想办理的业务 如：上牌</string>
    <string name="business_progress">业务流程</string>
    <string name="input_suggestion_hint">在此输入</string>
    <string name="suggestion_title">易务宝正在完善请留下您的宝贵意见</string>
    <string name="sumbit">点击提交</string>
    <string name="suggest_submit_hint">你没有输入字符，请输入字符后再提交建议</string>
    <string name="must_checked_agreetment">必须同意易务宝服务协议才能注册</string>
    <string name="phone_number_registered">手机已经注册，可用登录界面的“找回密码”或用“手机快捷登录”登录即可</string>
    <string name="ok">确定</string>
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="msg_camera_framework_bug">抱歉，相机出现问题。您可能需要重启设备。</string>
    <string name="no_order">您当前没有订单</string>
    <string name="service_exception">服务器异常</string>
    <string name="get_data_fail">获取数据失败</string>
    <string name="position_fail">定位失败</string>
    <string name="brand_story">品牌故事</string>
    <string name="picture">相册</string>
    <string name="buy_now">立即抢购</string>
    <string name="login_fail">登录失败，请检查网络以及核对短信验证码</string>
    <string name="code_error">验证码有误，请核对后再进行</string>
    <string name="request_fail">请求失败，请重新点击发送</string>
    <string name="pay_money">费用支付</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="may_service_type">可办业务</string>
    <string name="read_more">查看更多</string>
    <string name="nothing_bus">该业务暂时没有任何数据</string>
    <string name="post_fail">请求数据失败，请稍候重试</string>
    <string name="i_know">知道了</string>
    <string name="loading">加载中...</string>
    <string name="finish_post_data">请完善发布信息</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
</resources>