<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/add_goback_imgbtn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"

            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@mipmap/register_left_pre" />


        <TextView
            android:id="@+id/publishTopicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/add_car"
            android:textColor="@color/gray_default"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_number_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:text="@string/number_type" />

        <TextView
            android:id="@+id/add_small_car_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/add_number_type_txt"
            android:text="@string/small_car" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/add_small_car_txt"
            android:text="@string/large_car" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_car_type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_type" />

        <EditText
            android:id="@+id/add_select_car_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/add_car_type_txt"
            android:enabled="false"
            android:hint="@string/select_car"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/add_select_car_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/go" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_search_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/search_city" />

        <TextView
            android:id="@+id/add_city_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/add_search_city"
            android:text="null" />

        <ImageView
            android:id="@+id/add_city_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/go" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_car_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/car_number" />

        <TextView
            android:id="@+id/add_another_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/add_car_number_txt"
            android:text="@string/another_name" />

        <EditText
            android:id="@+id/add_car_number_Edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_engine_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/engine_number" />

        <EditText
            android:id="@+id/add_engine_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/add_engine_txt"
            android:text="@string/input_engine_number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_frame_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frame_number" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_frame_number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_insurance_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/insurance_date" />

        <EditText
            android:id="@+id/add_insurance_date_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_insurance_date"
            android:layout_toRightOf="@+id/add_insurance_date_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first_attendance_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/first_attendance_date" />

        <EditText
            android:id="@+id/first_attendance_date_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_attendance_date"
            android:layout_toRightOf="@+id/first_attendance_date_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/drive_distance_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/drive_distance" />

        <EditText
            android:id="@+id/drive_distance_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_drive_distance"
            android:layout_toRightOf="@+id/drive_distance_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_remark_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/drive_distance" />

        <EditText
            android:id="@+id/add_remark_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_car_about"
            android:layout_toRightOf="@+id/add_remark_txt"/>
    </RelativeLayout>
    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_begin"
        android:background="@color/orange"/>
    <TextView
        android:id="@+id/add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confidentiality_of_information"/>
</LinearLayout>