<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/balance_goback_rl"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageButton
                android:id="@+id/deposit_goback_imgbtn"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentLeft="true"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@mipmap/goback" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/account_balance"
            android:textColor="@color/gray_default"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/balance_income_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/income_detail"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/your_account_balance"
            />
        <TextView
            android:id="@+id/deposit_cash_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:paddingRight="20dp"
            tools:text="0"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1px"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/balance_pay_manager"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="1px"
            android:gravity="center_vertical"
            android:text="@string/pay_manager"
            android:paddingLeft="20dp"
            android:background="@color/white"
            />
        <ImageView
            android:id="@+id/balance_cash_go"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/go"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/balance_bank_car_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/bank_car"
        android:background="@color/white"
        />
    <Button
        android:id="@+id/balance_withdraw_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/withdraw_deposit"
        android:background="@color/white"
        />
</LinearLayout>