<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/register_goback"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@mipmap/register_left_pre"
            />


        <TextView
            android:id="@+id/publishTopicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/register_account"
            android:textColor="@color/orange"
            android:textSize="18sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/register_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_phone_number"
                android:textSize="16sp"
                android:textColor="@color/orange"
                />
            <ImageView
                android:id="@+id/register_first_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/register_number_txt"
                android:src="@mipmap/register_right_pre"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/register_code_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_code_txt"
                android:textSize="16sp"
                android:textColor="@color/gray_login_title"
                />
            <ImageView
                android:id="@+id/register_second_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/register_code_txt"
                android:src="@mipmap/register_right_nor"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/register_setting_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_phone_number"
                android:textSize="16sp"
                android:textColor="@color/gray_login_title"
                />
            <ImageView
                android:id="@+id/register_three_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/register_setting_pwd"
                android:src="@mipmap/register_right_nor"/>
        </RelativeLayout>

    </LinearLayout>
    <EditText
        android:id="@+id/register_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_register_number"
        android:background="@color/white"/>
    <Button
        android:id="@+id/register_get_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_code"
        android:background="@color/orange"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/register_agree_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:checked="true"/>
        <TextView
            android:id="@+id/register_agree_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/register_agree_check"
            android:text="@string/readed_and_agree"
            />
        <TextView
            android:id="@+id/yiwu_agreement_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/register_agree_txt"
            android:text="@string/yiwu_agreenment"
            />
    </RelativeLayout>
</LinearLayout>
